@@ -11,6 +11,7 @@
 * Post images slider shows unapproved comments images - FIXED
 * Validate email address option in emails settings - FIXED
 * GD > Listings block loads only 10 categories on CPT change - FIXED
+* Post thumbnail title not updated for existing attachment - FIXED
 
 = 2.1.0.16 =
 * Progressbar not moving during the demo content installation step - FIXED
